[gd_scene load_steps=2 format=3 uid="uid://b8xj2k4m5n6p"]

[ext_resource type="Script" path="res://scripts/StartScreen.gd" id="1"]

[node name="StartScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.9, 0.95, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -200.0
offset_right = 200.0
offset_bottom = 200.0

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Feelings Detective"
horizontal_alignment = 1

[node name="HighScoreLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "High Score: 0"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2

[node name="Instructions" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Help the characters understand how they feel!"
horizontal_alignment = 1
autowrap_mode = 3

[node name="PlayerNameInput" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "Enter your name, Detective..."

[node name="StartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Investigation"

[node name="CloseButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Close Game"